# Shelly

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  TODO  common.cpp  common.h  configuration.cpp  configuration.h  configure.ac  configureit  database.cpp  database.h  debug.cpp  debug.h  format.cpp  format.h  loop.cpp  loop.h  shelly.service  shelly.xml  shellyd.8.in  shellyd.config  shellyd.config.5.in  shellyd.cpp
